# CamPy

./: .gitignore  README.md
backend/: api.py  main.py  processor.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
